--- a/src/app/themes/index.scss
+++ b/src/app/themes/index.scss
@@ -1,6 +1,10 @@
+@charset "UTF-8";
+
 @import "common";
 @include normalize();
 @import "flexbox/plugin";
 @import "ionicons/ionicons";
 @import "~weui";
 @import "~swiper/dist/css/swiper.min.css";
+
+
